--- a/index.html
+++ b/index.html
@@ -15,113 +15,98 @@
 	<link rel="stylesheet" href="css/footer.css"> -->
 </head>
 <body>
-		<!-- navbar -->
 
-		<nav class="navbar navbar-expand-md navbar-white bg-white menu">
-			<div class="col-12">
-				<div class="container">
-					<div class="row">
-						<div class="logo">
-							<a href="http://rinsurance.ru/strahovanie-ipoteki">
-								<img src="img/logo.png" class="img-fluid" alt="Ипотечное страхование"></a>
-								<div class="capt1">
-									Reimers Insurance
-									<br>
-									<span class="capt2">Страховое агентство</span>
-								</div>
-							</div>
-							<div class="phone-wrapper">
-								<div class="phone">					<p>Москва</p>
-									<a href="tel:+74955404575">+7 (495) 540-45-75</a></div>
-									<div class="phone">					<p>Санкт-Петербург</p>
-										<a href="tel:+78123634847">+7 (812) 363-48-47</a></div>
-										<div>
-											<div class="callBack-link js__formOpen" data-toggle="modal" data-target="#CallBackModal" data-location="Звонок_верхнее_меню">
-												<img src="img/callback.png" alt="">
-												<span class="callBack-text">Обратный звонок</span>
-											</div>
-										</div>
-									</div>
-									<div class="ml-auto">
-
-										<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation"> <i class="fa fa-bars" aria-hidden="true"></i></button>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-12 menu-top fixed-top">
-							<div class="container">
-								<div class="collapse navbar-collapse" id="navbarCollapse">
-									<ul class="navbar-nav">
-<!-- 						<li class="nav-item">
-							<a class="nav-link" href="about.php">О компании</a>
-						</li> -->
-						<li class="nav-item">
-							<a class="nav-link" href="#why-we">О нас</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#how-much">Калькулятор</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#faq">Почему мы?</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#contacts">Контакты</a>
-						</li>
-					</ul>
-				</div>
+<!-- navbar -->
+<nav class="navbar navbar-expand-md navbar-white bg-white menu">
+	<div class="col-12 menu-top fixed-top">
+		<div class="container">
+			<div class="collapse navbar-collapse" id="navbarCollapse">
+				<ul class="navbar-nav">
+					<li class="nav-item"><a class="nav-link" href="#why-we">О нас</a></li>
+					<li class="nav-item"><a class="nav-link" href="#how-much">Калькулятор</a></li>
+					<li class="nav-item"><a class="nav-link" href="#faq">Почему мы?</a></li>
+					<li class="nav-item"><a class="nav-link" href="#contacts">Контакты</a></li>
+				</ul>
 			</div>
 		</div>
-	</nav>
-	<!-- navbar -->
-
-	<div id="slogan">
+	</div>
+	<div class="col-12">
 		<div class="container">
-			<div class="slogan-block">
-				<h4 class="text-center">С нами сотрудничают лидеры рынка страхования</h4>
-				<div class="mt-4 d-flex justify-content-center">
-					<img src="img/ingos_logo.png" alt="">
-					<img src="img/absolut_logo.png" alt="">
-					<img src="img/ergo_logo.png" alt="">
-					<img src="img/sogaz_logo.png" alt="">
-					<img src="img/reso_logo.png" alt="" class="d-none d-md-block">
-					<img src="img/alfa_logo.png" alt="">
-					<img src="img/soglasie_logo.png" alt="" class="d-none d-sm-block">
-					<img src="img/pari_logo.png" alt="">
-					<img src="img/spasskie_logo.png" alt="">
-					<img src="img/liberty_logo.png" alt="" class="d-none d-sm-block">
+			<div class="row">
+				<div class="logo">
+					<a href="http://rinsurance.ru/strahovanie-ipoteki"><img src="img/logo.png" class="img-fluid" alt="Ипотечное страхование"></a>
+					<div class="capt1">Reimers Insurance<br><span class="capt2">Страховое агентство</span></div>
+				</div>
+				<div class="phone-wrapper">
+					<div class="phone"><p>Москва</p><a href="tel:+74955404575">+7 (495) 540-45-75</a></div>
+					<div class="phone"><p>Санкт-Петербург</p><a href="tel:+78123634847">+7 (812) 363-48-47</a></div>
+					<div>
+						<div class="callBack-link js__formOpen" data-toggle="modal" data-target="#CallBackModal" data-location="Звонок_верхнее_меню">
+							<img src="img/callback.png" alt="">
+							<span class="callBack-text">Обратный звонок</span>
+						</div>
+					</div>
+				</div>
+				<div class="ml-auto">
+					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+						<i class="fa fa-bars" aria-hidden="true"></i>
+					</button>
 				</div>
 			</div>
 		</div>
 	</div>
+</nav>
+<!-- /navbar -->
 
-
-
-
-
-	<div id="main" class="page-header">
-		<h1>СТРАХОВАНИЕ ПРОФЕССИОНАЛЬНОЙ ОТВЕТСТВЕННОСТИ ОЦЕНЩИКА</h1>
-<div class="container">
-				<ul>
-					<li>Подбор лучшего тарифа, от 0,07%</li>
-					<li>Предварительный расчет за 5 минут</li>
-					<li>Десятки страховых компаний- партнеров</li>
-					<li>Победа над формальностями</li>
-					<li>Согласование специальных условий</li>
-				</ul>
-			</div>
-		<p class="title">Нам доверяют подбор страховой защиты тысячи<br>
-			клиентов ежемесячно!
-		</p>
-			<div id="calculator">
-				<form class="calc" action="">
-					<h2>Калькулятор <br>страхования ответственности оценщика</h2>
-					<span class="btn btn-success btn-md center-block js__formOpen js__calcLead" role="button" data-toggle="modal" data-target="#leadModal" data-location="Калькулятор_заявка">Оставить заявку</span>
-					<span class="btn btn-outline-success btn-md center-block float-right js__formOpen js__calcLead" role="button" data-toggle="modal" data-target="#CallBackModal" data-location="Калькулятор_звонок">Заказать звонок</span>
-					<div class="clearfix"></div>
-
-				</form>
+<!-- partners block -->
+<div id="slogan">
+	<div class="container">
+		<div class="slogan-block">
+			<h4 class="text-center">С нами сотрудничают лидеры рынка страхования</h4>
+			<div class="mt-4 d-flex justify-content-center">
+				<img src="img/ingos_logo.png" alt="">
+				<img src="img/absolut_logo.png" alt="">
+				<img src="img/ergo_logo.png" alt="">
+				<img src="img/sogaz_logo.png" alt="">
+				<img src="img/reso_logo.png" alt="" class="d-none d-md-block">
+				<img src="img/alfa_logo.png" alt="">
+				<img src="img/soglasie_logo.png" alt="" class="d-none d-sm-block">
+				<img src="img/pari_logo.png" alt="">
+				<img src="img/spasskie_logo.png" alt="">
+				<img src="img/liberty_logo.png" alt="" class="d-none d-sm-block">
 			</div>
 		</div>
+	</div>
+</div>
+<!-- /partners block -->
+
+<!-- calculate block -->
+<div id="main" class="page-header">
+	<h1>СТРАХОВАНИЕ ПРОФЕССИОНАЛЬНОЙ ОТВЕТСТВЕННОСТИ ОЦЕНЩИКА</h1>
+	<div class="container">
+		<ul>
+			<li>Подбор лучшего тарифа, от 0,07%</li>
+			<li>Предварительный расчет за 5 минут</li>
+			<li>Десятки страховых компаний- партнеров</li>
+			<li>Победа над формальностями</li>
+			<li>Согласование специальных условий</li>
+		</ul>
+	</div>
+	<p class="title">Нам доверяют подбор страховой защиты тысячи<br>клиентов ежемесячно!</p>
+	<div id="calculator">
+		<form class="calc" action="">
+			<h2>Калькулятор <br>страхования ответственности оценщика</h2>
+			<span class="btn btn-success btn-md center-block js__formOpen js__calcLead" role="button" data-toggle="modal" data-target="#leadModal" data-location="Калькулятор_заявка">Оставить заявку</span>
+			<span class="btn btn-outline-success btn-md center-block float-right js__formOpen js__calcLead" role="button" data-toggle="modal" data-target="#CallBackModal" data-location="Калькулятор_звонок">Заказать звонок</span>
+			<div class="clearfix"></div>
+		</form>
+	</div>
+</div>
+<!-- /calculate block -->
+
+
+
+
+
 </body>
 </html>
