wetrust block added

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/general.css">
 	<link rel="stylesheet" href="css/ipoteka.css">
+	<link rel="stylesheet" href="css/arenda.css">
 <!-- 	<link rel="stylesheet" href="css/header.css">
 	<link rel="stylesheet" href="css/footer.css"> -->
 </head>
@@ -104,8 +105,59 @@
 </div>
 <!-- /calculate block -->
 
+<!-- infographic block -->
+<div class="container">
+	Основные факторы, влияющие на стоимость договора страхования
+	(сделать инфографику из 6-ти картинок, предположительно в два ряда по 3шт, но там по ситуации. Формат картинок смотри в скане)
+</div>
+<!-- /infographic block -->
 
+<!-- attention block -->
+<div class="container">
+	Внимание! Если вы уже застраховали свою ответственность, но ищете надежную страховую компанию с более низкими тарифами на очередной год страхования - сравните тарифы действующего полиса с тарифами других страховых компаний, наш сервис вам в помощь!
+</div>
+<!-- /attention block -->
 
+<!-- othertext block -->
+<div class="container">
+	Для чего нужен договор страхования ответственности оценочной деятельности?<br>
+	Какие риски покроет страховка?<br>
+
+</div>
+<!-- /othertext block -->
+
+<!-- trust block -->
+<div id="we-trust">
+	<div class="container">
+		<h2>Нам доверяют</h2>
+		<div class="row justify-content-center">
+			<div class="col-12 col-md-10">
+				<div class="clients">
+					<div class="card"><img src="img/forza_logo.png" alt=""></div>
+					<div class="card"><img src="img/simddream_logo.png" alt=""></div>
+					<div class="card"><img src="img/svyaznoy_logo.png" alt=""></div>
+					<div class="card"><img src="img/unicredit_logo.png" alt=""></div>
+					<div class="card"><img src="img/x5_logo.png" alt=""></div>
+					<div class="card"><img src="img/mgnl_logo.png" alt=""></div>
+					<div class="card"><img src="img/michelin_logo.png" alt=""></div>
+					<div class="card"><img src="img/sony_logo.png" alt=""></div>
+					<div class="card"><img src="img/mts_logo.png" alt=""></div>
+				</div>
+				<h4 class="text-center">Наши преимущества</h4>
+				<div class="advantages">
+					<ul>
+						<li>Подберем оптимальные предложения от <strong>ТОП-10</strong> страховых компаний в течение 1 рабочего дня;</li>
+						<li>Индивидуальный подход по заключению договоров страхования, с учетом особенностей Вашего бизнеса;</li>
+						<li>Оформим необходимый пакет документов для арендодателя, в соответствии с требованиями договора аренды;</li>
+						<li>Бесплатно доставим полис страхования в пределах МКАД/КАД, а также осуществим доставку в любой регион РФ;</li>
+						<li>Окажем содействие в урегулировании вопросов со страховой компанией при наступлении страхового случая;</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<!-- trust block -->
 
 
 </body>
